[gd_scene load_steps=4 format=3 uid="uid://ciawd71tov4mc"]

[ext_resource type="Script" uid="uid://domng1jgjraqr" path="res://GameScene.gd" id="1_haeiw"]
[ext_resource type="PackedScene" uid="uid://bdlx7xwjovkbd" path="res://Card.tscn" id="1_k77ap"]
[ext_resource type="FontFile" uid="uid://c46dt4u8j01jo" path="res://CalSans-Regular.ttf" id="2_haeiw"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_haeiw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Card" parent="." instance=ExtResource("1_k77ap")]
unique_name_in_owner = true
position = Vector2(0, -32)

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ScoreLabel" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.18, 0.18, 0.18, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_haeiw")
theme_override_font_sizes/font_size = 48
text = "1230"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.18, 0.18, 0.18, 1)
theme_override_fonts/font = ExtResource("2_haeiw")
theme_override_font_sizes/font_size = 48
text = "ðŸª™"
horizontal_alignment = 1

[node name="Control3" type="Control" parent="UI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Control2" type="Control" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 55
alignment = 1

[node name="ActivateButton" type="Button" parent="UI/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_haeiw")
theme_override_font_sizes/font_size = 48
text = "Activate"
flat = true

[node name="SellButton" type="Button" parent="UI/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_haeiw")
theme_override_font_sizes/font_size = 48
text = "Sell"
flat = true
